<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.linkpulsion.age.MainActivity"
    android:id="@+id/bg_layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_layout"
                android:layout_marginBottom="15dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/name_input"
                    android:hint="@string/name"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sexe"
                android:id="@+id/textView"
                android:layout_below="@+id/name_layout"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorPrimary" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:layout_alignParentStart="true"
                android:id="@+id/radio_group"
                android:layout_marginBottom="5dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man"
                    android:id="@+id/man"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/woman"
                    android:id="@+id/woman"
                    android:layout_below="@+id/man"
                    android:layout_alignParentStart="true"
                    android:elegantTextHeight="false" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/datenaiss"
                android:id="@+id/textView2"
                android:layout_below="@+id/radio_group"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorPrimary" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/picker"
                android:datePickerMode="calendar"
                android:calendarViewShown="false"
                android:layout_below="@+id/textView2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_below="@id/picker"
                android:layout_centerInParent="true"
                android:id="@+id/val"/>

        </RelativeLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
